--- a/nufi/.deps/finite_difference_poisson.Po
+++ b/nufi/.deps/finite_difference_poisson.Po
@@ -1,7 +1,6 @@
 finite_difference_poisson.o: finite_difference_poisson.cpp \
  /usr/include/stdc-predef.h ../nufi/finite_difference_poisson.hpp \
- ../nufi/config.hpp /usr/include/curand_kernel.h \
- /usr/include/c++/11/type_traits \
+ ../nufi/config.hpp /usr/include/c++/11/cmath \
  /usr/include/x86_64-linux-gnu/c++/11/bits/c++config.h \
  /usr/include/x86_64-linux-gnu/c++/11/bits/os_defines.h \
  /usr/include/features.h /usr/include/features-time64.h \
@@ -12,8 +11,8 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
  /usr/include/x86_64-linux-gnu/gnu/stubs.h \
  /usr/include/x86_64-linux-gnu/gnu/stubs-64.h \
  /usr/include/x86_64-linux-gnu/c++/11/bits/cpu_defines.h \
- /usr/include/c++/11/pstl/pstl_config.h /usr/include/c++/11/math.h \
- /usr/include/c++/11/cmath /usr/include/c++/11/bits/cpp_type_traits.h \
+ /usr/include/c++/11/pstl/pstl_config.h \
+ /usr/include/c++/11/bits/cpp_type_traits.h \
  /usr/include/c++/11/ext/type_traits.h /usr/include/math.h \
  /usr/include/x86_64-linux-gnu/bits/libc-header-start.h \
  /usr/include/x86_64-linux-gnu/bits/types.h \
@@ -68,6 +67,7 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
  /usr/include/c++/11/bits/exception_defines.h \
  /usr/include/c++/11/ext/numeric_traits.h \
  /usr/include/c++/11/bits/stl_pair.h /usr/include/c++/11/bits/move.h \
+ /usr/include/c++/11/type_traits \
  /usr/include/c++/11/bits/stl_iterator_base_types.h \
  /usr/include/c++/11/bits/stl_iterator_base_funcs.h \
  /usr/include/c++/11/bits/concept_check.h \
@@ -86,44 +86,13 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
  /usr/include/c++/11/tr1/modified_bessel_func.tcc \
  /usr/include/c++/11/tr1/poly_hermite.tcc \
  /usr/include/c++/11/tr1/poly_laguerre.tcc \
- /usr/include/c++/11/tr1/riemann_zeta.tcc /usr/include/curand.h \
- /usr/include/cuda_runtime.h /usr/include/crt/host_config.h \
- /usr/include/builtin_types.h /usr/include/device_types.h \
- /usr/include/crt/host_defines.h /usr/include/driver_types.h \
- /usr/include/vector_types.h \
- /usr/lib/gcc/x86_64-linux-gnu/11/include/limits.h \
- /usr/lib/gcc/x86_64-linux-gnu/11/include/syslimits.h \
- /usr/include/limits.h /usr/include/x86_64-linux-gnu/bits/posix1_lim.h \
- /usr/include/x86_64-linux-gnu/bits/local_lim.h \
- /usr/include/linux/limits.h \
- /usr/include/x86_64-linux-gnu/bits/pthread_stack_min-dynamic.h \
- /usr/include/x86_64-linux-gnu/bits/posix2_lim.h \
- /usr/include/x86_64-linux-gnu/bits/xopen_lim.h \
- /usr/include/x86_64-linux-gnu/bits/uio_lim.h \
- /usr/include/surface_types.h /usr/include/texture_types.h \
- /usr/include/library_types.h /usr/include/channel_descriptor.h \
- /usr/include/cuda_runtime_api.h /usr/include/cuda_device_runtime_api.h \
- /usr/include/driver_functions.h /usr/include/vector_functions.h \
- /usr/include/vector_functions.hpp /usr/include/curand_discrete.h \
- /usr/include/curand_precalc.h /usr/include/curand_mrg32k3a.h \
- /usr/include/curand_mtgp32_kernel.h /usr/include/cuda.h \
- /usr/include/c++/11/stdlib.h /usr/include/c++/11/cstdlib \
- /usr/lib/gcc/x86_64-linux-gnu/11/include/stdint.h /usr/include/stdint.h \
- /usr/include/x86_64-linux-gnu/bits/wchar.h \
- /usr/include/x86_64-linux-gnu/bits/stdint-uintn.h /usr/include/memory.h \
- /usr/include/string.h /usr/include/strings.h \
- /usr/include/x86_64-linux-gnu/bits/strings_fortified.h \
- /usr/include/x86_64-linux-gnu/bits/string_fortified.h \
- /usr/include/curand_mtgp32.h /usr/include/curand_philox4x32_x.h \
- /usr/include/curand_globals.h /usr/include/curand_uniform.h \
- /usr/include/curand_normal.h /usr/include/curand_normal_static.h \
- /usr/include/curand_lognormal.h /usr/include/curand_poisson.h \
- /usr/include/curand_discrete2.h /usr/include/c++/11/iostream \
+ /usr/include/c++/11/tr1/riemann_zeta.tcc /usr/include/c++/11/iostream \
  /usr/include/c++/11/ostream /usr/include/c++/11/ios \
  /usr/include/c++/11/iosfwd /usr/include/c++/11/bits/stringfwd.h \
  /usr/include/c++/11/bits/memoryfwd.h /usr/include/c++/11/bits/postypes.h \
  /usr/include/c++/11/cwchar /usr/include/wchar.h \
  /usr/lib/gcc/x86_64-linux-gnu/11/include/stdarg.h \
+ /usr/include/x86_64-linux-gnu/bits/wchar.h \
  /usr/include/x86_64-linux-gnu/bits/types/wint_t.h \
  /usr/include/x86_64-linux-gnu/bits/types/mbstate_t.h \
  /usr/include/x86_64-linux-gnu/bits/types/__mbstate_t.h \
@@ -136,6 +105,8 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
  /usr/include/c++/11/typeinfo /usr/include/c++/11/bits/hash_bytes.h \
  /usr/include/c++/11/new /usr/include/c++/11/bits/nested_exception.h \
  /usr/include/c++/11/bits/char_traits.h /usr/include/c++/11/cstdint \
+ /usr/lib/gcc/x86_64-linux-gnu/11/include/stdint.h /usr/include/stdint.h \
+ /usr/include/x86_64-linux-gnu/bits/stdint-uintn.h \
  /usr/include/c++/11/bits/localefwd.h \
  /usr/include/x86_64-linux-gnu/c++/11/bits/c++locale.h \
  /usr/include/c++/11/clocale /usr/include/locale.h \
@@ -154,6 +125,7 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
  /usr/include/x86_64-linux-gnu/bits/types/struct_itimerspec.h \
  /usr/include/x86_64-linux-gnu/bits/setjmp.h \
  /usr/include/x86_64-linux-gnu/bits/types/struct___jmp_buf_tag.h \
+ /usr/include/x86_64-linux-gnu/bits/pthread_stack_min-dynamic.h \
  /usr/include/x86_64-linux-gnu/c++/11/bits/atomic_word.h \
  /usr/include/x86_64-linux-gnu/sys/single_threaded.h \
  /usr/include/c++/11/bits/locale_classes.h /usr/include/c++/11/string \
@@ -172,8 +144,9 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
  /usr/include/c++/11/bits/stl_construct.h /usr/include/c++/11/string_view \
  /usr/include/c++/11/bits/functional_hash.h \
  /usr/include/c++/11/bits/string_view.tcc \
- /usr/include/c++/11/ext/string_conversions.h /usr/include/c++/11/cstdio \
- /usr/include/stdio.h /usr/include/x86_64-linux-gnu/bits/types/__fpos_t.h \
+ /usr/include/c++/11/ext/string_conversions.h /usr/include/c++/11/cstdlib \
+ /usr/include/c++/11/cstdio /usr/include/stdio.h \
+ /usr/include/x86_64-linux-gnu/bits/types/__fpos_t.h \
  /usr/include/x86_64-linux-gnu/bits/types/__fpos64_t.h \
  /usr/include/x86_64-linux-gnu/bits/types/struct_FILE.h \
  /usr/include/x86_64-linux-gnu/bits/types/cookie_io_functions_t.h \
@@ -202,23 +175,26 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
  /usr/include/c++/11/bits/ostream.tcc /usr/include/c++/11/istream \
  /usr/include/c++/11/bits/istream.tcc /usr/include/c++/11/chrono \
  /usr/include/c++/11/ratio /usr/include/c++/11/ctime \
- /usr/include/c++/11/bits/parse_numbers.h /usr/include/c++/11/random \
- /usr/include/c++/11/bits/random.h /usr/include/c++/11/vector \
+ /usr/include/c++/11/bits/parse_numbers.h /usr/include/c++/11/vector \
  /usr/include/c++/11/bits/stl_uninitialized.h \
  /usr/include/c++/11/bits/stl_vector.h \
  /usr/include/c++/11/bits/stl_bvector.h \
- /usr/include/c++/11/bits/vector.tcc \
- /usr/include/c++/11/bits/uniform_int_dist.h \
- /usr/include/x86_64-linux-gnu/c++/11/bits/opt_random.h \
- /usr/include/c++/11/bits/random.tcc /usr/include/c++/11/numeric \
- /usr/include/c++/11/bits/stl_numeric.h /usr/include/c++/11/bit \
- /usr/include/c++/11/pstl/glue_numeric_defs.h \
- /usr/include/c++/11/pstl/execution_defs.h ../nufi/cuda_runtime.hpp \
- ../nufi/autoconfig.hpp /usr/local/include/armadillo \
+ /usr/include/c++/11/bits/vector.tcc /usr/local/include/armadillo \
  /usr/local/include/armadillo_bits/config.hpp \
  /usr/local/include/armadillo_bits/compiler_check.hpp \
  /usr/include/c++/11/cstddef /usr/include/c++/11/cstring \
- /usr/include/c++/11/climits /usr/include/c++/11/fstream \
+ /usr/include/string.h /usr/include/strings.h \
+ /usr/include/x86_64-linux-gnu/bits/strings_fortified.h \
+ /usr/include/x86_64-linux-gnu/bits/string_fortified.h \
+ /usr/include/c++/11/climits \
+ /usr/lib/gcc/x86_64-linux-gnu/11/include/limits.h \
+ /usr/lib/gcc/x86_64-linux-gnu/11/include/syslimits.h \
+ /usr/include/limits.h /usr/include/x86_64-linux-gnu/bits/posix1_lim.h \
+ /usr/include/x86_64-linux-gnu/bits/local_lim.h \
+ /usr/include/linux/limits.h \
+ /usr/include/x86_64-linux-gnu/bits/posix2_lim.h \
+ /usr/include/x86_64-linux-gnu/bits/xopen_lim.h \
+ /usr/include/x86_64-linux-gnu/bits/uio_lim.h /usr/include/c++/11/fstream \
  /usr/include/c++/11/bits/codecvt.h \
  /usr/include/x86_64-linux-gnu/c++/11/bits/basic_file.h \
  /usr/include/x86_64-linux-gnu/c++/11/bits/c++io.h \
@@ -229,6 +205,7 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
  /usr/include/c++/11/bits/algorithmfwd.h \
  /usr/include/c++/11/bits/stl_heap.h \
  /usr/include/c++/11/bits/stl_tempbuf.h \
+ /usr/include/c++/11/bits/uniform_int_dist.h \
  /usr/include/c++/11/pstl/glue_algorithm_defs.h \
  /usr/include/c++/11/functional /usr/include/c++/11/tuple \
  /usr/include/c++/11/array /usr/include/c++/11/bits/uses_allocator.h \
@@ -241,10 +218,16 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
  /usr/include/c++/11/bits/enable_special_members.h \
  /usr/include/c++/11/bits/node_handle.h \
  /usr/include/c++/11/bits/unordered_map.h \
- /usr/include/c++/11/bits/erase_if.h /usr/include/c++/11/complex \
+ /usr/include/c++/11/bits/erase_if.h \
+ /usr/include/c++/11/pstl/execution_defs.h /usr/include/c++/11/complex \
  /usr/include/c++/11/map /usr/include/c++/11/bits/stl_tree.h \
  /usr/include/c++/11/bits/stl_map.h \
- /usr/include/c++/11/bits/stl_multimap.h /usr/include/c++/11/mutex \
+ /usr/include/c++/11/bits/stl_multimap.h /usr/include/c++/11/random \
+ /usr/include/c++/11/bits/random.h \
+ /usr/include/x86_64-linux-gnu/c++/11/bits/opt_random.h \
+ /usr/include/c++/11/bits/random.tcc /usr/include/c++/11/numeric \
+ /usr/include/c++/11/bits/stl_numeric.h /usr/include/c++/11/bit \
+ /usr/include/c++/11/pstl/glue_numeric_defs.h /usr/include/c++/11/mutex \
  /usr/include/c++/11/bits/std_mutex.h \
  /usr/include/c++/11/bits/unique_lock.h /usr/include/c++/11/atomic \
  /usr/include/c++/11/bits/atomic_base.h \
@@ -856,8 +839,7 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
 /usr/include/stdc-predef.h:
 ../nufi/finite_difference_poisson.hpp:
 ../nufi/config.hpp:
-/usr/include/curand_kernel.h:
-/usr/include/c++/11/type_traits:
+/usr/include/c++/11/cmath:
 /usr/include/x86_64-linux-gnu/c++/11/bits/c++config.h:
 /usr/include/x86_64-linux-gnu/c++/11/bits/os_defines.h:
 /usr/include/features.h:
@@ -870,8 +852,6 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
 /usr/include/x86_64-linux-gnu/gnu/stubs-64.h:
 /usr/include/x86_64-linux-gnu/c++/11/bits/cpu_defines.h:
 /usr/include/c++/11/pstl/pstl_config.h:
-/usr/include/c++/11/math.h:
-/usr/include/c++/11/cmath:
 /usr/include/c++/11/bits/cpp_type_traits.h:
 /usr/include/c++/11/ext/type_traits.h:
 /usr/include/math.h:
@@ -932,6 +912,7 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
 /usr/include/c++/11/ext/numeric_traits.h:
 /usr/include/c++/11/bits/stl_pair.h:
 /usr/include/c++/11/bits/move.h:
+/usr/include/c++/11/type_traits:
 /usr/include/c++/11/bits/stl_iterator_base_types.h:
 /usr/include/c++/11/bits/stl_iterator_base_funcs.h:
 /usr/include/c++/11/bits/concept_check.h:
@@ -953,58 +934,6 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
 /usr/include/c++/11/tr1/poly_hermite.tcc:
 /usr/include/c++/11/tr1/poly_laguerre.tcc:
 /usr/include/c++/11/tr1/riemann_zeta.tcc:
-/usr/include/curand.h:
-/usr/include/cuda_runtime.h:
-/usr/include/crt/host_config.h:
-/usr/include/builtin_types.h:
-/usr/include/device_types.h:
-/usr/include/crt/host_defines.h:
-/usr/include/driver_types.h:
-/usr/include/vector_types.h:
-/usr/lib/gcc/x86_64-linux-gnu/11/include/limits.h:
-/usr/lib/gcc/x86_64-linux-gnu/11/include/syslimits.h:
-/usr/include/limits.h:
-/usr/include/x86_64-linux-gnu/bits/posix1_lim.h:
-/usr/include/x86_64-linux-gnu/bits/local_lim.h:
-/usr/include/linux/limits.h:
-/usr/include/x86_64-linux-gnu/bits/pthread_stack_min-dynamic.h:
-/usr/include/x86_64-linux-gnu/bits/posix2_lim.h:
-/usr/include/x86_64-linux-gnu/bits/xopen_lim.h:
-/usr/include/x86_64-linux-gnu/bits/uio_lim.h:
-/usr/include/surface_types.h:
-/usr/include/texture_types.h:
-/usr/include/library_types.h:
-/usr/include/channel_descriptor.h:
-/usr/include/cuda_runtime_api.h:
-/usr/include/cuda_device_runtime_api.h:
-/usr/include/driver_functions.h:
-/usr/include/vector_functions.h:
-/usr/include/vector_functions.hpp:
-/usr/include/curand_discrete.h:
-/usr/include/curand_precalc.h:
-/usr/include/curand_mrg32k3a.h:
-/usr/include/curand_mtgp32_kernel.h:
-/usr/include/cuda.h:
-/usr/include/c++/11/stdlib.h:
-/usr/include/c++/11/cstdlib:
-/usr/lib/gcc/x86_64-linux-gnu/11/include/stdint.h:
-/usr/include/stdint.h:
-/usr/include/x86_64-linux-gnu/bits/wchar.h:
-/usr/include/x86_64-linux-gnu/bits/stdint-uintn.h:
-/usr/include/memory.h:
-/usr/include/string.h:
-/usr/include/strings.h:
-/usr/include/x86_64-linux-gnu/bits/strings_fortified.h:
-/usr/include/x86_64-linux-gnu/bits/string_fortified.h:
-/usr/include/curand_mtgp32.h:
-/usr/include/curand_philox4x32_x.h:
-/usr/include/curand_globals.h:
-/usr/include/curand_uniform.h:
-/usr/include/curand_normal.h:
-/usr/include/curand_normal_static.h:
-/usr/include/curand_lognormal.h:
-/usr/include/curand_poisson.h:
-/usr/include/curand_discrete2.h:
 /usr/include/c++/11/iostream:
 /usr/include/c++/11/ostream:
 /usr/include/c++/11/ios:
@@ -1015,6 +944,7 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
 /usr/include/c++/11/cwchar:
 /usr/include/wchar.h:
 /usr/lib/gcc/x86_64-linux-gnu/11/include/stdarg.h:
+/usr/include/x86_64-linux-gnu/bits/wchar.h:
 /usr/include/x86_64-linux-gnu/bits/types/wint_t.h:
 /usr/include/x86_64-linux-gnu/bits/types/mbstate_t.h:
 /usr/include/x86_64-linux-gnu/bits/types/__mbstate_t.h:
@@ -1031,6 +961,9 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
 /usr/include/c++/11/bits/nested_exception.h:
 /usr/include/c++/11/bits/char_traits.h:
 /usr/include/c++/11/cstdint:
+/usr/lib/gcc/x86_64-linux-gnu/11/include/stdint.h:
+/usr/include/stdint.h:
+/usr/include/x86_64-linux-gnu/bits/stdint-uintn.h:
 /usr/include/c++/11/bits/localefwd.h:
 /usr/include/x86_64-linux-gnu/c++/11/bits/c++locale.h:
 /usr/include/c++/11/clocale:
@@ -1054,6 +987,7 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
 /usr/include/x86_64-linux-gnu/bits/types/struct_itimerspec.h:
 /usr/include/x86_64-linux-gnu/bits/setjmp.h:
 /usr/include/x86_64-linux-gnu/bits/types/struct___jmp_buf_tag.h:
+/usr/include/x86_64-linux-gnu/bits/pthread_stack_min-dynamic.h:
 /usr/include/x86_64-linux-gnu/c++/11/bits/atomic_word.h:
 /usr/include/x86_64-linux-gnu/sys/single_threaded.h:
 /usr/include/c++/11/bits/locale_classes.h:
@@ -1075,6 +1009,7 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
 /usr/include/c++/11/bits/functional_hash.h:
 /usr/include/c++/11/bits/string_view.tcc:
 /usr/include/c++/11/ext/string_conversions.h:
+/usr/include/c++/11/cstdlib:
 /usr/include/c++/11/cstdio:
 /usr/include/stdio.h:
 /usr/include/x86_64-linux-gnu/bits/types/__fpos_t.h:
@@ -1117,29 +1052,30 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
 /usr/include/c++/11/ratio:
 /usr/include/c++/11/ctime:
 /usr/include/c++/11/bits/parse_numbers.h:
-/usr/include/c++/11/random:
-/usr/include/c++/11/bits/random.h:
 /usr/include/c++/11/vector:
 /usr/include/c++/11/bits/stl_uninitialized.h:
 /usr/include/c++/11/bits/stl_vector.h:
 /usr/include/c++/11/bits/stl_bvector.h:
 /usr/include/c++/11/bits/vector.tcc:
-/usr/include/c++/11/bits/uniform_int_dist.h:
-/usr/include/x86_64-linux-gnu/c++/11/bits/opt_random.h:
-/usr/include/c++/11/bits/random.tcc:
-/usr/include/c++/11/numeric:
-/usr/include/c++/11/bits/stl_numeric.h:
-/usr/include/c++/11/bit:
-/usr/include/c++/11/pstl/glue_numeric_defs.h:
-/usr/include/c++/11/pstl/execution_defs.h:
-../nufi/cuda_runtime.hpp:
-../nufi/autoconfig.hpp:
 /usr/local/include/armadillo:
 /usr/local/include/armadillo_bits/config.hpp:
 /usr/local/include/armadillo_bits/compiler_check.hpp:
 /usr/include/c++/11/cstddef:
 /usr/include/c++/11/cstring:
+/usr/include/string.h:
+/usr/include/strings.h:
+/usr/include/x86_64-linux-gnu/bits/strings_fortified.h:
+/usr/include/x86_64-linux-gnu/bits/string_fortified.h:
 /usr/include/c++/11/climits:
+/usr/lib/gcc/x86_64-linux-gnu/11/include/limits.h:
+/usr/lib/gcc/x86_64-linux-gnu/11/include/syslimits.h:
+/usr/include/limits.h:
+/usr/include/x86_64-linux-gnu/bits/posix1_lim.h:
+/usr/include/x86_64-linux-gnu/bits/local_lim.h:
+/usr/include/linux/limits.h:
+/usr/include/x86_64-linux-gnu/bits/posix2_lim.h:
+/usr/include/x86_64-linux-gnu/bits/xopen_lim.h:
+/usr/include/x86_64-linux-gnu/bits/uio_lim.h:
 /usr/include/c++/11/fstream:
 /usr/include/c++/11/bits/codecvt.h:
 /usr/include/x86_64-linux-gnu/c++/11/bits/basic_file.h:
@@ -1154,6 +1090,7 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
 /usr/include/c++/11/bits/algorithmfwd.h:
 /usr/include/c++/11/bits/stl_heap.h:
 /usr/include/c++/11/bits/stl_tempbuf.h:
+/usr/include/c++/11/bits/uniform_int_dist.h:
 /usr/include/c++/11/pstl/glue_algorithm_defs.h:
 /usr/include/c++/11/functional:
 /usr/include/c++/11/tuple:
@@ -1170,11 +1107,20 @@ finite_difference_poisson.o: finite_difference_poisson.cpp \
 /usr/include/c++/11/bits/node_handle.h:
 /usr/include/c++/11/bits/unordered_map.h:
 /usr/include/c++/11/bits/erase_if.h:
+/usr/include/c++/11/pstl/execution_defs.h:
 /usr/include/c++/11/complex:
 /usr/include/c++/11/map:
 /usr/include/c++/11/bits/stl_tree.h:
 /usr/include/c++/11/bits/stl_map.h:
 /usr/include/c++/11/bits/stl_multimap.h:
+/usr/include/c++/11/random:
+/usr/include/c++/11/bits/random.h:
+/usr/include/x86_64-linux-gnu/c++/11/bits/opt_random.h:
+/usr/include/c++/11/bits/random.tcc:
+/usr/include/c++/11/numeric:
+/usr/include/c++/11/bits/stl_numeric.h:
+/usr/include/c++/11/bit:
+/usr/include/c++/11/pstl/glue_numeric_defs.h:
 /usr/include/c++/11/mutex:
 /usr/include/c++/11/bits/std_mutex.h:
 /usr/include/c++/11/bits/unique_lock.h:
