--- a/README
+++ b/README
@@ -45,3 +45,5 @@ cd test
 ```
 
 The pre-made executables can be found in the bin-folder.
+
+The developers can be contacted via: paul.wilhelm@kuleuven.be.
